@@ -2686,4 +2686,6 @@
 	* arch/arm/src/stm32/stm32_otgfs.c: The driver needs to reset the software (in
 	  order to flush the requests) and to disable the software connection when the
 	  device is unregistered.
+	* include/sys/prctl.h, sched/prctl.c, include/pthread.h:  Add interfaces to
+	  support getting and setting of the thread or task name.
 
